egress-tls-origination-gateway-with-cacert/curl-updated.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: curl
  name: curl
  namespace: demo-istio
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep infinity
    image: curlimages/curl
    name: curl
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
